[project]
name = "comfyui-workflowcheckpointing"
description = "Automatically creates checkpoints during workflow execution. If If an workflow is canceled or ComfyUI crashes mid-execution, then these checkpoints are used when the workflow is re-queued to resume execution with minimal progress loss."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/AustinMroz/ComfyUI-WorkflowCheckpointing"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "austinmroz"
DisplayName = "ComfyUI-WorkflowCheckpointing"
Icon = ""
